[project]
name = "langchain-react-agent"
version = "0.1.0"
description = "A LangChain agent with React and Hono API integration"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "langchain_openai>=0.0.5",
    "langchain_community>=0.0.10",
    "langchain_experimental>=0.0.10",
    "langgraph>=0.0.20",
    "langserve>=0.0.20",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "duckduckgo_search==4.1.1",
    "google-search-results>=2.4.2",
    "pandas>=2.0.0"
]

[build-system]
requires = ["hatchling", "setuptools>=42", "wheel"]
build-backend = "hatchling.build"

[tool.langserve]
export = ["app.server:app"]
port = 8000

[tool.ruff]
line-length = 88
target-version = "py311" 