[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain_react_agent"
version = "1.0.0"
description = "A LangChain agent with React and Hono API integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "langchain-core>=0.1.0",
    "langserve>=0.0.10",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "uvicorn>=0.24.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "langchain-experimental>=0.0.10",
    "langgraph>=0.0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["langchain_react_agent"]

[tool.langserve]
export = ["langchain_react_agent.server:app"]
port = 8000

[tool.ruff]
line-length = 88
target-version = "py311" 